hack4/nginx-ingress-api.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-routing
  namespace: t16api
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:

  rules:
  - http:
      paths:
      - backend:
          serviceName: poi
          servicePort: 80
        path: /api/poi/(.*)
