hack4/nginx-ingress-web.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-routing
  namespace: t16web
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: tripviewer-service
          servicePort: 80
        path: /(.*)
